--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Sangwook Lee",
   "license": "MIT",
   "dependencies": {
+    "axios": "^1.6.7",
     "fastify": "^4.26.2",
     "fastify-zod": "^1.4.0",
     "zod": "^3.22.4",
@@ -18,6 +19,7 @@
   },
   "devDependencies": {
     "ts-node": "^10.9.2",
-    "ts-node-dev": "^2.0.0"
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.4.2"
   }
 }
