--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
   "dependencies": {
     "@types/selenium-webdriver": "^4.1.22",
     "axios": "^1.6.7",
+    "dotenv": "^16.4.5",
     "fastify": "^4.26.2",
     "fastify-zod": "^1.4.0",
+    "openai": "^4.29.2",
     "selenium-webdriver": "^4.18.1",
     "zod": "^3.22.4",
     "zod-to-json-schema": "^3.22.4"
